<resources>
    <string name="app_name">letsGoApp</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cadastrar</string>
    <string name="title_notifications">Lista</string>
    <string name="title_cadastro">Cadastro</string>
    <string name="title_perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>